[project]
name = "mcp-build"
version = "0.1.0"
description = "TruthLens - Misinformation surveillance platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "langchain>=0.0.267",
    "langchain-google-genai>=0.0.3",
    "google-generativeai>=0.3.0",
    "wikipedia>=1.4.0",
    "praw>=7.7.0",
    "newsapi-python>=0.2.7",
    "python-dotenv>=1.0.0",
]
